# pychatwork

./: .gitignore  MANIFEST.in  README.md  pychatwork.py  pyproject.toml  setup.py
pychatwork/: __init__.py  pychatwork.py
tests/: test_pychatwork.py
